--- a/index.html
+++ b/index.html
@@ -945,16 +945,55 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <p>C&oacute; lỗi xảy ra</p>
 </div>
 <script>
-  const scriptURL = 'https://script.google.com/macros/s/AKfycbyHTG-m7lGCpJurzgPRfPvoxya6L1LSPOcoE6OcCcnoo9e-aAkR/exec'
-  const form = document.forms['submit-to-google-sheet']
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbyHTG-m7lGCpJurzgPRfPvoxya6L1LSPOcoE6OcCcnoo9e-aAkR/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const formmodal = document.forms['submit-to-google-sheet-modal']
+    const loading = document.querySelector('.js-loading')
+    const successMessage = document.querySelector('.js-success-message')
+    const errorMessage = document.querySelector('.js-error-message')
 
-  form.addEventListener('submit', e => {
-    e.preventDefault()
-    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-      .then(response => console.log('Success!', response))
-      .catch(error => console.error('Error!', error.message))
-  })
-</script>
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      showLoadingIndicator()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => showSuccessMessage(response))
+        .catch(error => showErrorMessage(error))
+    })
+
+    function showLoadingIndicator () {
+      form.classList.add('is-hidden')
+      loading.classList.remove('is-hidden')
+    }
+
+    formmodal.addEventListener('submit', e => {
+      e.preventDefault()
+      showLoadingIndicatorModal()
+      fetch(scriptURL, { method: 'POST', body: new FormData(formmodal)})
+        .then(response => showSuccessMessage(response))
+        .catch(error => showErrorMessage(error))
+    })
+
+    function showLoadingIndicatorModal () {
+      formmodal.classList.add('is-hidden')
+      loading.classList.remove('is-hidden')
+    }
+
+    function showSuccessMessage (response) {
+      console.log('Success!', response)
+      setTimeout(() => {
+        successMessage.classList.remove('is-hidden')
+        loading.classList.add('is-hidden')
+      }, 500)
+    }
+
+    function showErrorMessage (error) {
+      console.error('Error!', error.message)
+      setTimeout(() => {
+        errorMessage.classList.remove('is-hidden')
+        loading.classList.add('is-hidden')
+      }, 500)
+    }
+  </script>
 
 
 
